# Summary_Chatbot

./: .gitignore  main.py  openai_api.ipynb  openai_api_test.ipynb  project_structure.txt  pyproject.toml  readme.md
1_notebooks/: langchain_test.ipynb  usefull_comments.py
2_data/: story.txt
api/: chain.py  prompt.py  test_functions.ipynb
app/: app.py
notebooks/: langchain_test.ipynb  usefull_comments.py
src/summary_chatbot/: main.py
src/summary_chatbot/api/: chain.py
src/summary_chatbot/prompts/: prompt.py
tests/: test_chat_history.ipynb  test_functions.ipynb
