[project]
name = "summary-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "openai>=2.26.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
